assets/CSS/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&display=swap');

/* CSS Variables */

:root {
  --primary-font: "inter", sans-serif;
  --secondary-font: "Macondo", cursive; 
  --primary-color: #3a2620; /* darkbrown */
  --secondary-color: #aa9581; /* lightbrown */
  --highlight-color: #416a8e; /* blue */
  --highlight-color-light: #7a9fc2; /* lightblue */
}

/* global styles */

body {
  font-family: var(--primary-font);
  padding-top: 57.15px;
}

h1,
h2,
h3 {
  font-family: var(--secondary-font);
  color: var(--primary-color);
  
}

h1,
h2 {
 text-transform: uppercase; 
}

.sub-heading-color{
  color: var(--highlight-color);
}

.section {
  margin-top: 2rem;
  margin-bottom: 2rem;
}

h2 {
  margin-bottom: 2rem;
}

/* buttons */

.custom-button-filled {
  border: 2px solid var(--highlight-color);
  background-color: var(--highlight-color);
  color: white;
}

.custom-button-filled:hover {
  border: 2px solid var(--secondary-color);
  background-color: var(--secondary-color);
  color: white;
}

.custom-button-outline {
  border: 2px solid var(--highlight-color);
  color: var(--highlight-color);
  padding: 7px 25px;
}

.custom-button-outline:hover {
  background-color: var(--highlight-color);
  color: white;
}


/* Navbar styling */

#navbar {
  background-color: var(--primary-color);
}

#navbar .logo {
  width: 30px;
}


/* Header styling */

#header .lead {
  font-family: var(--secondary-font);
}


/* services styling */

#services .card-footer {
  font-weight: bold;
  color: var(--highlight-color);
  background-color: transparent;
}

#services .card {
  margin-bottom: 1.5rem;
}

/* game library cards */

#new-games .card,
#fav-games .card {
  border: none;
}


/* footer / contact */

#contact {
  background-color: var(--primary-color);
  color: white;
  padding-bottom: 3rem;
}

#contact h2 {
  color: white ;
}

#contact .sub-heading-color {
  color: var(--highlight-color-light);
}

#contact i {
  color: var(--secondary-color);
  font-size: 1.2rem ;
  margin-right: 15px;
}

#contact .social-links i {
  color: var(--highlight-color-light);
  font-size: 1.9rem;
  transition: color 0.3s ease-in-out;
}

#contact .social-links i:hover{
  color: var(--secondary-color);
}

/* opening times table */

#contact .table-dark *{
  background-color: transparent;
}

/* event section */

#events .student-disc-text {
   text-align: center;
   background: var(--highlight-color);
   color: white;


}

/* media queries */
/* media device 768px and up */
@media screen and (min-width: 768px) {

  /* make all service cards the same height for consistency */
  #services .card-body {
    min-height: 191px;
  }
}
/* media device 992px and up */
@media screen and (min-width: 992px) {

  /* make all service cards the same height for consistency */
  #services .card-body {
    min-height: auto;
  }
}

/* media device 1200px and up */
@media screen and (min-width: 1200px) {

  /* make all service cards the same height for consistency */
  #services .card-body {
    min-height: 220px;
  }
}

/* media device 1400px and up */
@media screen and (min-width: 1400px) {

  /* make all service cards the same height for consistency */
  #services .card-body {
    min-height: 195px;
  }
}
/* grid visualisation test */
/* .container, .row {
  border: 2px solid black;
}

.col-12 {
  border: 2px solid white;
  background-color: lightgray;
} */

